--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   run_tests:
     docker:
-      - image: circleci/node:12
+      - image: circleci/node:latest
     steps:
       - checkout
       - run:
